src/main/mp/parser/MPParser.py
# Generated from main/mp/parser/MP.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MPParser ( Parser ):

    grammarFileName = "MP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':='", "'+'", "'-'", "'*'", "'/'", "<INVALID>", 
                     "'='", "'>'", "'>='", "'<'", "'<='", "<INVALID>", "<INVALID>", 
                     "'<>'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "','", "'..'", 
                     "':'", "';'", "'['", "']'", "'('", "')'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "CEOP", "ADDOP", "SUBOP", "MULOP", "DIVOP", 
                      "MODOP", "EQUOP", "MTOP", "MTEOP", "LTOP", "LTEOP", 
                      "ANDOP", "OROP", "NEOP", "NOTOP", "DIV", "FOR", "TO", 
                      "DOWNTO", "INTTYPE", "VOIDTYPE", "REALTYPE", "STRINGTYPE", 
                      "BOOLEAN", "BREAK", "CONTINUE", "DO", "WHILE", "IF", 
                      "ELSE", "RETURN", "THEN", "BEGIN", "END", "FUNCTION", 
                      "PROCEDURE", "VAR", "ARRAY", "OF", "WITH", "TRADITIONAL_BLOCK", 
                      "BLOCK_COMMENT", "LINE_COMMENT", "BOOLLIT", "ID", 
                      "COMMA", "DOUDOT", "COLON", "SEMI", "LSB", "RSB", 
                      "LB", "RB", "LP", "RP", "INTLIT", "FLOATLIT", "WS", 
                      "STRINGLIT", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_one_Dec = 1
    RULE_var_dec = 2
    RULE_variable = 3
    RULE_type_D = 4
    RULE_array = 5
    RULE_subop1 = 6
    RULE_subop2 = 7
    RULE_fun_dec = 8
    RULE_paramList = 9
    RULE_param = 10
    RULE_compound = 11
    RULE_statement = 12
    RULE_assignment = 13
    RULE_lhs = 14
    RULE_exp = 15
    RULE_andthenop = 16
    RULE_orelseop = 17
    RULE_exp1 = 18
    RULE_exp2 = 19
    RULE_exp3 = 20
    RULE_exp4 = 21
    RULE_operand = 22
    RULE_operand2 = 23
    RULE_exp_id = 24
    RULE_if_stmt = 25
    RULE_for_stmt = 26
    RULE_while_stmt = 27
    RULE_br_stmt = 28
    RULE_continue_stmt = 29
    RULE_with_stmt = 30
    RULE_return_stmt = 31
    RULE_funcall = 32
    RULE_call = 33
    RULE_manyexp = 34
    RULE_proce_dec = 35

    ruleNames =  [ "program", "one_Dec", "var_dec", "variable", "type_D", 
                   "array", "subop1", "subop2", "fun_dec", "paramList", 
                   "param", "compound", "statement", "assignment", "lhs", 
                   "exp", "andthenop", "orelseop", "exp1", "exp2", "exp3", 
                   "exp4", "operand", "operand2", "exp_id", "if_stmt", "for_stmt", 
                   "while_stmt", "br_stmt", "continue_stmt", "with_stmt", 
                   "return_stmt", "funcall", "call", "manyexp", "proce_dec" ]

    EOF = Token.EOF
    CEOP=1
    ADDOP=2
    SUBOP=3
    MULOP=4
    DIVOP=5
    MODOP=6
    EQUOP=7
    MTOP=8
    MTEOP=9
    LTOP=10
    LTEOP=11
    ANDOP=12
    OROP=13
    NEOP=14
    NOTOP=15
    DIV=16
    FOR=17
    TO=18
    DOWNTO=19
    INTTYPE=20
    VOIDTYPE=21
    REALTYPE=22
    STRINGTYPE=23
    BOOLEAN=24
    BREAK=25
    CONTINUE=26
    DO=27
    WHILE=28
    IF=29
    ELSE=30
    RETURN=31
    THEN=32
    BEGIN=33
    END=34
    FUNCTION=35
    PROCEDURE=36
    VAR=37
    ARRAY=38
    OF=39
    WITH=40
    TRADITIONAL_BLOCK=41
    BLOCK_COMMENT=42
    LINE_COMMENT=43
    BOOLLIT=44
    ID=45
    COMMA=46
    DOUDOT=47
    COLON=48
    SEMI=49
    LSB=50
    RSB=51
    LB=52
    RB=53
    LP=54
    RP=55
    INTLIT=56
    FLOATLIT=57
    WS=58
    STRINGLIT=59
    UNCLOSE_STRING=60
    ILLEGAL_ESCAPE=61
    ERROR_CHAR=62

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MPParser.EOF, 0)

        def one_Dec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.One_DecContext)
            else:
                return self.getTypedRuleContext(MPParser.One_DecContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 72
                self.one_Dec()
                self.state = 75 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.FUNCTION) | (1 << MPParser.PROCEDURE) | (1 << MPParser.VAR))) != 0)):
                    break

            self.state = 77
            self.match(MPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class One_DecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_dec(self):
            return self.getTypedRuleContext(MPParser.Var_decContext,0)


        def fun_dec(self):
            return self.getTypedRuleContext(MPParser.Fun_decContext,0)


        def proce_dec(self):
            return self.getTypedRuleContext(MPParser.Proce_decContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_one_Dec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOne_Dec" ):
                return visitor.visitOne_Dec(self)
            else:
                return visitor.visitChildren(self)




    def one_Dec(self):

        localctx = MPParser.One_DecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_one_Dec)
        try:
            self.state = 82
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 79
                self.var_dec()
                pass
            elif token in [MPParser.FUNCTION]:
                self.enterOuterAlt(localctx, 2)
                self.state = 80
                self.fun_dec()
                pass
            elif token in [MPParser.PROCEDURE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 81
                self.proce_dec()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_decContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MPParser.VAR, 0)

        def variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.VariableContext)
            else:
                return self.getTypedRuleContext(MPParser.VariableContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_var_dec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_dec" ):
                return visitor.visitVar_dec(self)
            else:
                return visitor.visitChildren(self)




    def var_dec(self):

        localctx = MPParser.Var_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_dec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(MPParser.VAR)
            self.state = 86 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 85
                self.variable()
                self.state = 88 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MPParser.ID):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.ID)
            else:
                return self.getToken(MPParser.ID, i)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def type_D(self):
            return self.getTypedRuleContext(MPParser.Type_DContext,0)


        def array(self):
            return self.getTypedRuleContext(MPParser.ArrayContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.COMMA)
            else:
                return self.getToken(MPParser.COMMA, i)

        def getRuleIndex(self):
            return MPParser.RULE_variable

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable" ):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)




    def variable(self):

        localctx = MPParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variable)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(MPParser.ID)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MPParser.COMMA:
                self.state = 91
                self.match(MPParser.COMMA)
                self.state = 92
                self.match(MPParser.ID)
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 98
            self.match(MPParser.COLON)
            self.state = 101
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.INTTYPE, MPParser.REALTYPE, MPParser.STRINGTYPE, MPParser.BOOLEAN]:
                self.state = 99
                self.type_D()
                pass
            elif token in [MPParser.ARRAY]:
                self.state = 100
                self.array()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 103
            self.match(MPParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Type_DContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTTYPE(self):
            return self.getToken(MPParser.INTTYPE, 0)

        def REALTYPE(self):
            return self.getToken(MPParser.REALTYPE, 0)

        def STRINGTYPE(self):
            return self.getToken(MPParser.STRINGTYPE, 0)

        def BOOLEAN(self):
            return self.getToken(MPParser.BOOLEAN, 0)

        def getRuleIndex(self):
            return MPParser.RULE_type_D

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_D" ):
                return visitor.visitType_D(self)
            else:
                return visitor.visitChildren(self)




    def type_D(self):

        localctx = MPParser.Type_DContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_type_D)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.INTTYPE) | (1 << MPParser.REALTYPE) | (1 << MPParser.STRINGTYPE) | (1 << MPParser.BOOLEAN))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArrayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MPParser.ARRAY, 0)

        def LSB(self):
            return self.getToken(MPParser.LSB, 0)

        def INTLIT(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.INTLIT)
            else:
                return self.getToken(MPParser.INTLIT, i)

        def DOUDOT(self):
            return self.getToken(MPParser.DOUDOT, 0)

        def RSB(self):
            return self.getToken(MPParser.RSB, 0)

        def OF(self):
            return self.getToken(MPParser.OF, 0)

        def type_D(self):
            return self.getTypedRuleContext(MPParser.Type_DContext,0)


        def subop1(self):
            return self.getTypedRuleContext(MPParser.Subop1Context,0)


        def subop2(self):
            return self.getTypedRuleContext(MPParser.Subop2Context,0)


        def getRuleIndex(self):
            return MPParser.RULE_array

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray" ):
                return visitor.visitArray(self)
            else:
                return visitor.visitChildren(self)




    def array(self):

        localctx = MPParser.ArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_array)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(MPParser.ARRAY)
            self.state = 108
            self.match(MPParser.LSB)
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.SUBOP:
                self.state = 109
                self.subop1()


            self.state = 112
            self.match(MPParser.INTLIT)
            self.state = 113
            self.match(MPParser.DOUDOT)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.SUBOP:
                self.state = 114
                self.subop2()


            self.state = 117
            self.match(MPParser.INTLIT)
            self.state = 118
            self.match(MPParser.RSB)
            self.state = 119
            self.match(MPParser.OF)
            self.state = 120
            self.type_D()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Subop1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SUBOP(self):
            return self.getToken(MPParser.SUBOP, 0)

        def getRuleIndex(self):
            return MPParser.RULE_subop1

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubop1" ):
                return visitor.visitSubop1(self)
            else:
                return visitor.visitChildren(self)




    def subop1(self):

        localctx = MPParser.Subop1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_subop1)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(MPParser.SUBOP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Subop2Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SUBOP(self):
            return self.getToken(MPParser.SUBOP, 0)

        def getRuleIndex(self):
            return MPParser.RULE_subop2

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubop2" ):
                return visitor.visitSubop2(self)
            else:
                return visitor.visitChildren(self)




    def subop2(self):

        localctx = MPParser.Subop2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_subop2)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(MPParser.SUBOP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Fun_decContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(MPParser.FUNCTION, 0)

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def paramList(self):
            return self.getTypedRuleContext(MPParser.ParamListContext,0)


        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def compound(self):
            return self.getTypedRuleContext(MPParser.CompoundContext,0)


        def type_D(self):
            return self.getTypedRuleContext(MPParser.Type_DContext,0)


        def array(self):
            return self.getTypedRuleContext(MPParser.ArrayContext,0)


        def var_dec(self):
            return self.getTypedRuleContext(MPParser.Var_decContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_fun_dec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFun_dec" ):
                return visitor.visitFun_dec(self)
            else:
                return visitor.visitChildren(self)




    def fun_dec(self):

        localctx = MPParser.Fun_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_fun_dec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(MPParser.FUNCTION)
            self.state = 127
            self.match(MPParser.ID)
            self.state = 128
            self.match(MPParser.LB)
            self.state = 129
            self.paramList()
            self.state = 130
            self.match(MPParser.RB)
            self.state = 131
            self.match(MPParser.COLON)
            self.state = 134
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.INTTYPE, MPParser.REALTYPE, MPParser.STRINGTYPE, MPParser.BOOLEAN]:
                self.state = 132
                self.type_D()
                pass
            elif token in [MPParser.ARRAY]:
                self.state = 133
                self.array()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 136
            self.match(MPParser.SEMI)
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.VAR:
                self.state = 137
                self.var_dec()


            self.state = 140
            self.compound()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.ParamContext)
            else:
                return self.getTypedRuleContext(MPParser.ParamContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SEMI)
            else:
                return self.getToken(MPParser.SEMI, i)

        def getRuleIndex(self):
            return MPParser.RULE_paramList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = MPParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.state = 151
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.param()
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MPParser.SEMI:
                    self.state = 143
                    self.match(MPParser.SEMI)
                    self.state = 144
                    self.param()
                    self.state = 149
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [MPParser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.ID)
            else:
                return self.getToken(MPParser.ID, i)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def type_D(self):
            return self.getTypedRuleContext(MPParser.Type_DContext,0)


        def array(self):
            return self.getTypedRuleContext(MPParser.ArrayContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.COMMA)
            else:
                return self.getToken(MPParser.COMMA, i)

        def getRuleIndex(self):
            return MPParser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = MPParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_param)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(MPParser.ID)
            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MPParser.COMMA:
                self.state = 154
                self.match(MPParser.COMMA)
                self.state = 155
                self.match(MPParser.ID)
                self.state = 160
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 161
            self.match(MPParser.COLON)
            self.state = 164
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.INTTYPE, MPParser.REALTYPE, MPParser.STRINGTYPE, MPParser.BOOLEAN]:
                self.state = 162
                self.type_D()
                pass
            elif token in [MPParser.ARRAY]:
                self.state = 163
                self.array()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CompoundContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BEGIN(self):
            return self.getToken(MPParser.BEGIN, 0)

        def END(self):
            return self.getToken(MPParser.END, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.StatementContext)
            else:
                return self.getTypedRuleContext(MPParser.StatementContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_compound

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompound" ):
                return visitor.visitCompound(self)
            else:
                return visitor.visitChildren(self)




    def compound(self):

        localctx = MPParser.CompoundContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_compound)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.match(MPParser.BEGIN)
            self.state = 170
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.FOR) | (1 << MPParser.BREAK) | (1 << MPParser.CONTINUE) | (1 << MPParser.WHILE) | (1 << MPParser.IF) | (1 << MPParser.RETURN) | (1 << MPParser.BEGIN) | (1 << MPParser.WITH) | (1 << MPParser.BOOLLIT) | (1 << MPParser.ID) | (1 << MPParser.LB) | (1 << MPParser.INTLIT) | (1 << MPParser.FLOATLIT) | (1 << MPParser.STRINGLIT))) != 0):
                self.state = 167
                self.statement()
                self.state = 172
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 173
            self.match(MPParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(MPParser.AssignmentContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(MPParser.If_stmtContext,0)


        def for_stmt(self):
            return self.getTypedRuleContext(MPParser.For_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(MPParser.While_stmtContext,0)


        def br_stmt(self):
            return self.getTypedRuleContext(MPParser.Br_stmtContext,0)


        def continue_stmt(self):
            return self.getTypedRuleContext(MPParser.Continue_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(MPParser.Return_stmtContext,0)


        def compound(self):
            return self.getTypedRuleContext(MPParser.CompoundContext,0)


        def funcall(self):
            return self.getTypedRuleContext(MPParser.FuncallContext,0)


        def with_stmt(self):
            return self.getTypedRuleContext(MPParser.With_stmtContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_statement
